:car: binary search & readme

--- a/#9.md
+++ b/#9.md
@@ -70,4 +70,24 @@ T(n)=Cn+nlog2n
 
 [找出第K大元素代码](https://github.com/LIUeng/alogrithm-ci/blob/master/%239.js)
 
+## 快速排序算法的优化
+
+`思考`
+
+- 优化快速排序
+
+![排序算法比较](https://imgkr.cn-bj.ufileos.com/290b18c0-b9de-4603-aec1-4bc7c9ccf43a.png)
+
+> 快速排序,如果数据是有序或者接近有序的条件下，分区每次选择最后一个数据，快速排序会非常糟糕，时间复杂度退化成O(n^2)
+
+1. 三数取中法
+
+首、尾、中间取值，比较大小，取中间值数
+
+2. 随机法
+
+随机取一个值，进行分区
+
+[快速排序优化代码](https://github.com/LIUeng/alogrithm-ci/blob/master/%239-optimize.js)
+
 [引用地址](https://time.geekbang.org/column/article/41913)
