--- a/#12.md
+++ b/#12.md
@@ -33,3 +33,31 @@
 2. 链表法
 
 ![链表法](https://imgkr.cn-bj.ufileos.com/c8b8c595-7c97-4500-9531-97609a582d9d.png)
+
+# 数据结构与算法
+
+## 散列表(II)
+
+`思考`
+
+- 如何设计一个工业级水平的散列表
+
+### 装载因子
+
+```md
+散列表的装载因子 = 填入表中的元素个数/散列表的长度
+```
+
+### 散列表的特性
+
+1. 支持快速的插入、删除、查询操作
+2. 内存占用合理，不能浪费过多的内存空间
+3. 性能稳定，极端情况，也不会退化成无法接受的情况
+
+### 散列表的实现
+
+1. 设计一个合适的散列函数
+2. 定义装载因子阈值，并且设计动态扩容策略
+3. 选择合适的散列冲突解决方法
+
+[引用地址](https://time.geekbang.org/column/article/64586)
