--- a/#13.md
+++ b/#13.md
@@ -45,6 +45,10 @@
 
 左节点 右节点 根节点
 
+### 二叉树时间复杂度
+
+每个节点最多遍历两次，跟节点的个数n成正比，所以时间复杂度为O(n)
+
 [二叉树代码地址waiting](https://github.com/LIUeng/alogrithm-ci/blob/master/%2313.js)
 
 [引用地址](https://time.geekbang.org/column/article/67856)
