:vs: update code

--- a/#2.md
+++ b/#2.md
@@ -17,6 +17,9 @@
 
 1. 线性表&非线性表
 
+- 线性表：每个线性表上的数据最多只有前后两个方向
+- 非线性表：数据不是前后两个方向简单的关系
+
 ![线性表](https://imgkr.cn-bj.ufileos.com/3ba38c47-160e-4ce2-8d49-ada0f44c03d8.png)
 
 ![非线性表](https://imgkr.cn-bj.ufileos.com/71f22563-ae13-4f0a-ae89-394cba5b1cf1.png)
@@ -24,7 +27,6 @@
 2. 连续的内存空间
 
 ![内存地址](https://imgkr.cn-bj.ufileos.com/42506c2b-977e-42a9-b170-b0eacb758e96.png)
-
 
 - 计算公式
 
