--- a/#9.md
+++ b/#9.md
@@ -42,7 +42,7 @@ T(n) = 2*T(n/2) + n
 // 当T(n/2^k)=T(1)时，n/2^k = 1, k=log2n 代入上述公式，得到
 T(n)=Cn+nlog2n
 
-// 时间复杂度即为log2n
+// 时间复杂度即为nlog2n
 ```
 
 - 归并排序的空间复杂度
